--- a/src/components/ingredients-item/ingredients-item.module.css
+++ b/src/components/ingredients-item/ingredients-item.module.css
@@ -5,6 +5,11 @@
     cursor: pointer;
 }
 
+.dragBlock {
+    position: relative;
+    z-index: 1;
+}
+
 .price {
     display: flex;
     align-items: center;
