исправляет замечания по результатам проверки

--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -19,6 +19,7 @@ ul {
     display: grid;
     overflow: auto;
     row-gap: 16px;
+    width: 585px;
     max-height: 464px;
     list-style-type: none;
 }
