--- a/src/components/nav-button/nav-button.module.css
+++ b/src/components/nav-button/nav-button.module.css
@@ -1,6 +1,6 @@
 .button {
 	display: flex;
-	color: var(--text-primary-light);
+    color: var(--text-dark-grey);
     font-size: 16px;
 	line-height: 24px;
 	letter-spacing: 0em;
@@ -8,6 +8,6 @@
     text-decoration: none;
 }
 
-.secondary {
-    color: var(--text-dark-grey);
+.buttonActive {
+    color: var(--text-primary-light);
 }
