--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
 	--text-primary-light: #f2f2f3;
 	--text-dark-grey: #8585ad;
+    --interface-accent: #4C4CFF;
 }
 
 html, body {
@@ -13,6 +14,12 @@ body {
     color: var(--text-primary-light);
 }
 
-/* .constructor-element__text {
-    min-width: 250px;
-} */
+.big-input-container .input_size_default, .big-input-container  .input__container {
+    width: 100%;
+}
+
+.profile-nav.active {
+    color: var(--text-primary-light);
+    text-decoration: none;
+}
+
