--- a/src/components/ingredient-details/ingredient-details.module.css
+++ b/src/components/ingredient-details/ingredient-details.module.css
@@ -1,3 +1,14 @@
+.wrapper {
+    width: 480px;
+    height: fit-content;
+    position: absolute;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
 .description {
     display: flex;
     flex-direction: column;
