--- a/src/pages/profile/profile.module.css
+++ b/src/pages/profile/profile.module.css
@@ -2,7 +2,15 @@
     max-width: 1280px;
     margin: 120px auto 0 auto;
     display: grid;
-    grid-template-columns: 1fr auto 1fr;
+    
+}
+
+.columns2 {
+    grid-template-columns: minmax(300px, 400px) auto;
+}
+
+.columns3 {
+    grid-template-columns: minmax(300px, 400px) auto minmax(300px, 400px);
 }
 
 .leftBlock {
@@ -12,7 +20,6 @@
 }
 
 .centerBlock {
-    width: 480px;
     height: fit-content;
 }
 
