--- a/src/components/feed-details/feed-details.module.css
+++ b/src/components/feed-details/feed-details.module.css
@@ -1,5 +1,12 @@
 .wrapper {
     width: 640px;
+    height: fit-content;
+    position: absolute;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .ingredients {
